--- a/app.html
+++ b/app.html
@@ -1,89 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book store</title>
-    <link rel="stylesheet" href="app.css" />
-    <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
-  </head>
 
-  <body>
-    <div id="search">
-      <input type="text" id="search" name="search" />
-      <button type="submit" >Search</button>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Book store</title>
+  <link rel="stylesheet" href="app.css" />
+  <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
+</head>
 
-    <div id="main">
-      <div id="box1">
-        {{contents}}
-        <button id="ok"v-on:click="subject1">Add to cart</button>
-      </div>
-      <div id="box2">
-        {{contents}}
-        <button v-on:click="subject2">Add to cart</button>
-      </div>
-      <div id="box3">
-        {{contents}}
-        <button v-on:click="subject3">Add to cart</button>
-      </div>
-      <div id="box4">
-        {{contents}}
-        <button v-on:click="subject4">Add to cart</button>
-      </div>
-      <div id="box5">
-        {{contents}}
-        <button v-on:click="subject5">Add to cart</button>
-      </div>
-      <div id="box6">
-        {{contents}}
-        <button v-on:click="subject6">Add to cart</button>
-      </div>
-      <div id="box7">
-        {{contents}}
-        <button v-on:click="subject7">Add to cart</button>
-      </div>
-      <div id="box8">
-        {{contents}}
-        <button v-on:click="subject8">Add to cart</button>
-      </div>
-      <div id="box9">
-        {{contents}}
-        <button v-on:click="subject9">Add to cart</button>
-      </div>
-      <div id="box10">
-        {{contents}}
-        <button v-on:click="subject10">Add to cart</button>
-      </div>
-    </div>
-    <h4>Sort by</h4>
-    <div id="sort1">
-      <button v-on:click="sortNames">Subject</button>
-      <ul>
-        <li v-for="name in sortedNames" :key="name">{{ name }}</li>
-      </ul>
-    </div>
-    <div id="sort2"><button v-on:click="location">Location</button></div>
-    <div id="sort3">
-      <button v-on:click="sortNumbers">Price</button>
-      <ul>
-        <li v-for="number in sortedNumbers" :key="number">{{ number }}</li>
-      </ul>
-    </div>
-    <div id="sort4">
-      <button v-on:click="availability">Availability</button>
-    </div>
-    <div id="sort5"><button v-on:click="order1">Ascending</button></div>
-    <div id="sort6"><button v-on:click="order2">Descending</button></div>
-    <div id="app2">
-      <button @click="toggleLessons">Lessons</button>
-      <ul v-if="showingLessons">
-          <li v-for="lesson in lessons">{{ lesson.lesson }}</li>
-      </ul>
+<body>
+  <div id="search">
+    <input type="text" id="search" name="search" />
+    <button type="submit">Search</button>
   </div>
 
-    <script src="app.js"></script>
-    <script src="lessons.js"></script>
+  <div id="main">
+    <div id="box1">
+      {{contents}}
+      <button id="ok" v-on:click="subject1">Add to cart</button>
+    </div>
+    <div id="box2">
+      {{contents}}
+      <button v-on:click="subject2">Add to cart</button>
+    </div>
+    <div id="box3">
+      {{contents}}
+      <button v-on:click="subject3">Add to cart</button>
+    </div>
+    <div id="box4">
+      {{contents}}
+      <button v-on:click="subject4">Add to cart</button>
+    </div>
+    <div id="box5">
+      {{contents}}
+      <button v-on:click="subject5">Add to cart</button>
+    </div>
+    <div id="box6">
+      {{contents}}
+      <button v-on:click="subject6">Add to cart</button>
+    </div>
+    <div id="box7">
+      {{contents}}
+      <button v-on:click="subject7">Add to cart</button>
+    </div>
+    <div id="box8">
+      {{contents}}
+      <button v-on:click="subject8">Add to cart</button>
+    </div>
+    <div id="box9">
+      {{contents}}
+      <button v-on:click="subject9">Add to cart</button>
+    </div>
+    <div id="box10">
+      {{contents}}
+      <button v-on:click="subject10">Add to cart</button>
+    </div>
+  </div>
+  <h4>Sort by</h4>
+  <div id="sort1">
+    <div class="lessons-container">
+      <button v-on:click="toggleNames">Subjects</button>
+      <ul class="lessons-list" v-if="showNames">
+        <li v-for="name in sortedNames" class="lesson-item" :key="name">{{ name }}</li>
+      </ul>
+    </div>
+  </div>
 
-  </body>
+  <div id="sort2"><button v-on:click="location">Location</button></div>
+  <div id="sort3">
+    <div class="lessons-container">
+      <button v-on:click="toggleNumbers">Price</button>
+      <ul class="lessons-list" v-if="showNumbers">
+        <li v-for="number in sortedNumbers" class="lesson-item" :key="number">{{ number }}</li>
+      </ul>
+    </div>
+  </div>
+  
+  <div id="sort4">
+    <button v-on:click="availability">Availability</button>
+  </div>
+  <div id="sort5"><button v-on:click="order1">Ascending</button></div>
+  <div id="sort6"><button v-on:click="order2">Descending</button></div><br><br>
+  <div id="app2">
+    <div class="lessons-container">
+      <button v-on:click="toggleLessons">Lessons</button>
+      <ul v-if="showingLessons" class="lessons-list">
+        <li v-for="lesson in lessons" class="lesson-item">{{ lesson.lesson }}</li>
+      </ul>
+    </div>
+  </div>
+  
+  
+  
+  <script src="app.js"></script>
+  <script src="lessons.js"></script>
+
+</body>
+
 </html>
+
