--- a/app.html
+++ b/app.html
@@ -1,84 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Book store</title>
+    <link rel="stylesheet" href="app.css" />
+    <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Book store</title>
-  <link rel="stylesheet" href="app.css" />
-  <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
-</head>
+  <body>
+    <div id="search">
+      <input type="text" id="search" name="search" />
+      <button type="submit">Search</button>
+    </div>
 
-<body>
-  <div id="search">
-    <input type="text" id="search" name="search" />
-    <button type="submit">Search</button>
-  </div>
+    <div id="main">
+      <div id="box1">
+        {{contents}}
+        <button id="ok" v-on:click="subject1">Add to cart</button>
+      </div>
+      <div id="box2">
+        {{contents}}
+        <button v-on:click="subject2">Add to cart</button>
+      </div>
+      <div id="box3">
+        {{contents}}
+        <button v-on:click="subject3">Add to cart</button>
+      </div>
+      <div id="box4">
+        {{contents}}
+        <button v-on:click="subject4">Add to cart</button>
+      </div>
+      <div id="box5">
+        {{contents}}
+        <button v-on:click="subject5">Add to cart</button>
+      </div>
+      <div id="box6">
+        {{contents}}
+        <button v-on:click="subject6">Add to cart</button>
+      </div>
+      <div id="box7">
+        {{contents}}
+        <button v-on:click="subject7">Add to cart</button>
+      </div>
+      <div id="box8">
+        {{contents}}
+        <button v-on:click="subject8">Add to cart</button>
+      </div>
+      <div id="box9">
+        {{contents}}
+        <button v-on:click="subject9">Add to cart</button>
+      </div>
+      <div id="box10">
+        {{contents}}
+        <button v-on:click="subject10">Add to cart</button>
+      </div>
+    </div>
+    <h2>Sort by</h2>
+    <div class="subject-container">
+      <h3>Subject</h3>
+      <div class="sorting-buttons">
+        <div id="sort1"><button v-on:click="order1">Ascending</button></div>
+        <div id="sort2"><button v-on:click="order2">Descending</button></div>
+      </div>
+    </div>
 
-  <div id="main">
-    <div id="box1">
-      {{contents}}
-      <button id="ok" v-on:click="subject1">Add to cart</button>
-    </div>
-    <div id="box2">
-      {{contents}}
-      <button v-on:click="subject2">Add to cart</button>
-    </div>
-    <div id="box3">
-      {{contents}}
-      <button v-on:click="subject3">Add to cart</button>
-    </div>
-    <div id="box4">
-      {{contents}}
-      <button v-on:click="subject4">Add to cart</button>
-    </div>
-    <div id="box5">
-      {{contents}}
-      <button v-on:click="subject5">Add to cart</button>
-    </div>
-    <div id="box6">
-      {{contents}}
-      <button v-on:click="subject6">Add to cart</button>
-    </div>
-    <div id="box7">
-      {{contents}}
-      <button v-on:click="subject7">Add to cart</button>
-    </div>
-    <div id="box8">
-      {{contents}}
-      <button v-on:click="subject8">Add to cart</button>
-    </div>
-    <div id="box9">
-      {{contents}}
-      <button v-on:click="subject9">Add to cart</button>
-    </div>
-    <div id="box10">
-      {{contents}}
-      <button v-on:click="subject10">Add to cart</button>
-    </div>
-  </div>
-  <h2>Sort by</h2>
-  <h3>Subjects</h3>
-  <h3>Location</h3>
-  <h3>Price</h3>
-  <h3>Availability</h3>
-  
-  <div id="sort1"><button v-on:click="order1">Ascending</button></div>
-  <div id="sort2"><button v-on:click="order2">Descending</button></div><br><br>
-  <div id="app2">
-    <div class="lessons-container">
-      <button v-on:click="toggleLessons">Lessons</button>
-      <ul v-if="showingLessons" class="lessons-list">
-        <li v-for="lesson in lessons" class="lesson-item">{{ lesson.lesson }}</li>
-      </ul>
-    </div>
-  </div>
-  
-  
-  
-  <script src="app.js"></script>
-  <script src="lessons.js"></script>
+    <h3>Location</h3>
 
-</body>
+    <h3>Price</h3>
 
+    <h3>Availability</h3>
+
+    <div id="app2">
+      <div class="lessons-container">
+        <button v-on:click="toggleLessons">Lessons</button>
+        <ul v-if="showingLessons" class="lessons-list">
+          <li v-for="lesson in lessons" class="lesson-item">
+            {{ lesson.lesson }}
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <script src="app.js"></script>
+    <script src="lessons.js"></script>
+  </body>
 </html>
