--- a/app.html
+++ b/app.html
@@ -59,13 +59,19 @@
     <h2>Sort by</h2>
     <div class="subject-container">
       <h3>Subject</h3>
-      <div class="sorting-buttons">
+      <div class="sorting-buttons1">
         <div id="sort1"><button v-on:click="order1">Ascending</button></div>
         <div id="sort2"><button v-on:click="order2">Descending</button></div>
       </div>
     </div>
+    <div class="location-container">
 
     <h3>Location</h3>
+    <div class="sorting-buttons2"></div>
+    <div id="sort3"><button v-on:click="order3">Ascending</button></div>
+    <div id="sort4"><button v-on:click="order4">Descending</button></div>
+  </div>
+</div>
 
     <h3>Price</h3>
 
