--- a/app.html
+++ b/app.html
@@ -19,51 +19,61 @@
     <div id="box1">
       {{contents}}
       <button id="ok" v-on:click="subject1">Add to cart</button>
+      <img src="./Icons/Math.png" width="60px">
     </div>
 
     <div id="box2">
       {{contents}}
       <button v-on:click="subject2">Add to cart</button>
+      <img src="./Icons/English.png" width="60px">
     </div>
 
     <div id="box3">
       {{contents}}
       <button v-on:click="subject3">Add to cart</button>
+      <img src="./Icons/Bengali.png" width="60">
     </div>
 
     <div id="box4">
       {{contents}}
       <button v-on:click="subject4">Add to cart</button>
+      <img src="./Icons/Physics.png" width="60px">
     </div>
 
     <div id="box5">
       {{contents}}
       <button v-on:click="subject5">Add to cart</button>
+      <img src="./Icons/Music.png" width="60px">
     </div>
 
     <div id="box6">
       {{contents}}
       <button v-on:click="subject6">Add to cart</button>
+      <img src="./Icons/Sculpture.png" width="60px">
     </div>
 
     <div id="box7">
       {{contents}}
       <button v-on:click="subject7">Add to cart</button>
+      <img src="./Icons/Chemistry.png" width="60px">
     </div>
 
     <div id="box8">
       {{contents}}
       <button v-on:click="subject8">Add to cart</button>
+      <img src="./Icons/Biology.png" width="60px">
     </div>
 
     <div id="box9">
       {{contents}}
       <button v-on:click="subject9">Add to cart</button>
+      <img src="./Icons/French.png" width="60px">
     </div>
 
     <div id="box10">
       {{contents}}
       <button v-on:click="subject10">Add to cart</button>
+      <img src="./Icons/Food.png" width="60px">
     </div>
   </div>
 
