--- a/app.html
+++ b/app.html
@@ -24,13 +24,17 @@
 
     <div id="products">
       <div class="product" v-for="product in products" :key="product.id">
-        <div class="product-details"></div>
+        <div class="product-details">
+         
+        </div>
         Subject: {{ product.name }}
         Location: {{ product.location }}
         Price: £{{ product.price }}
         Available: {{ product.available }}
+  
 
-        <button v-on:click="addToCart(product)" :disabled="product.available === 0">Add to Cart</button><br><br>
+        <button v-on:click="addToCart(product)" :disabled="product.available === 0">Add to Cart</button><br>
+        <img :src="product.imageUrl" alt="Product Image" width="60px" />
       </div>
 
     </div><br>
