Connecting with render

--- a/index.html
+++ b/index.html
@@ -162,5 +162,7 @@
 
     
     <script src="app.js"></script>
+    imagesBaseURL:"https://mobile-app-jv52.onrender.com/"
+    serverBaseURL:"https://mobile-app-jv52.onrender.com/"
   </body>
 </html>
